--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -39,5 +40,29 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div style="margin-top: 10px; background-color: white;">
+      <div>
+        <ul style="display: flex; margin-left: 15px; margin-top: 18px;background-color: white;">
+          <li style="font-size: 20px; margin: 15px 5px 15px 45px; font-family: Arial, Helvetica, sans-serif; width: 17%;background-color: white;">Hỗ trợ khách hàng
+          <p style="font-size: 15px;font-family: Arial, Helvetica, sans-serif; margin-top: 8px;margin-bottom: 5px;background-color: white;">Câu hỏi thường gặp</p>
+          <p style="font-size: 15px;font-family: Arial, Helvetica, sans-serif; margin-top: 8px;margin-bottom: 5px;background-color: white;">Chính sách đổi trả</p>
+          <p style="font-size: 15px;font-family: Arial, Helvetica, sans-serif; margin-top: 8px;margin-bottom: 5px;background-color: white;">Hướng dẫn trả góp</p>
+          </li>
+          <li style="font-size: 20px; margin: 15px 5px 15px 20px; font-family: Arial, Helvetica, sans-serif;width: 17%;background-color: white;">Về chúng tôi
+            <p style="font-size: 15px;font-family: Arial, Helvetica, sans-serif; margin-top: 8px;margin-bottom: 5px;background-color: white;"><a style="color: black;" href="https://www.facebook.com/">Liên hệ</a></p>
+          </li>
+          <li style="font-size: 20px; margin: 15px 5px 15px 20px; font-family: Arial, Helvetica, sans-serif;width: 17%;background-color: white;">Hợp tác và liên kết
+            <p style="font-size: 15px;font-family: Arial, Helvetica, sans-serif; margin-top: 8px;margin-bottom: 5px;background-color: white;"><a style="color: black;" href="https://vku.udn.vn/">Vietnam - Korea University of Information and Communication Technology</a></p>
+          
+          </li>
+          <li style="font-size: 20px; margin: 15px 5px 15px 20px; font-family: Arial, Helvetica, sans-serif;width: 17%;background-color: white;">Kết nối với chúng tôi
+            <p style="font-size: 15px;font-family: Arial, Helvetica, sans-serif; margin-top: 8px;margin-bottom: 5px;background-color: white;"><a style="color: black;" href="https://vku.udn.vn/">Vietnam - Korea University of Information and Communication Technology</a></p>
+            <p style="font-size: 15px;font-family: Arial, Helvetica, sans-serif; margin-top: 8px;margin-bottom: 5px;background-color: white;"><a style="color: black;" href="https://www.facebook.com/">About me</a></p>
+          </li>
+        </ul>
+         <hr  style="width: 30%;margin-left: 35%;"/>
+         <p style="text-align: center;margin-top: 15px;margin-bottom: 25px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px;">Website design by <a href="https://www.facebook.com/">xuân</a></p>
+      </div>
+    </div>
   </body>
 </html>
